[gd_scene load_steps=9 format=3 uid="uid://bdrvmn7dmj51s"]

[ext_resource type="Script" path="res://checkpoint.gd" id="1_s1gts"]
[ext_resource type="Texture2D" uid="uid://bd6us6yxnoit5" path="res://sprites/sheet16.png" id="2_tfgok"]
[ext_resource type="Texture2D" uid="uid://b72mtb6irwso" path="res://sprites/white.png" id="3_bdw8w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gskjn"]
atlas = ExtResource("2_tfgok")
region = Rect2(40, 56, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl3b3"]
atlas = ExtResource("2_tfgok")
region = Rect2(40, 64, 24, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38ygh"]
size = Vector2(8, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ywkr"]
size = Vector2(8, 8)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6hby8"]
lifetime_randomness = 0.15
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
damping_min = 100.0
damping_max = 100.0

[node name="Checkpoint" type="StaticBody2D"]
script = ExtResource("1_s1gts")

[node name="SpriteInactive" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("AtlasTexture_gskjn")
hframes = 3

[node name="SpriteActive" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("AtlasTexture_fl3b3")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_38ygh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_1ywkr")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0, 1, 0, 1)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_6hby8")
texture = ExtResource("3_bdw8w")
one_shot = true
explosiveness = 0.67

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
